27_matrix_input/grade.txt
Grading at Mon Mar 11 17:35:00 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:66:3: error: ISO C forbids nested functions [-Werror=pedantic]
   void rotate(char matrix[10][10]) {
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
